--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
   },
   "dependencies": {
     "expo": "~42.0.1",
+    "expo-camera": "~11.2.2",
+    "expo-face-detector": "~10.1.1",
+    "expo-screen-capture": "^3.2.0",
+    "expo-screen-orientation": "~3.2.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.1",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
@@ -21,7 +28,10 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
